# webops-scripts

./: .gitignore  README.md  cf-add-network-policy.sh
cf-audit-tool/: main.py  requirements.txt
cf-audit-tool/helper/: report.py
cf-audit-tool/lib/: api.py  endPoints.py  parse.py
cf_audit/: README.md  main.py  requirements.txt
cf_audit/auditlib/: api.py  endPoints.py  fetch.py  parse.py
cf_audit/helper/: report.py  write.py
cloud_front_audit/: main.py  requirement.txt
offbording_checker/: .gitignore  main.py  requirements.txt
offbording_checker/modules/: atlassian_admin.py  xlsx_reader.py
perf_report/: README.md  pyproject.toml  report.py  requirements.txt
scan-for-key-paas/: pyproject.toml  scan.py
