[tool.poetry]
name = "perf_report"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
aiohttp = "^3.9.4"
certifi = "^2023.7.22"
click = "^8.0.4"
httpx = "^0.23.0"
idna = "^3.7"
python = "^3.8"
python-dateutil = "^2.8.2"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
