[tool.poetry]
name = "scan-for-key-paas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
aiohttp = "^3.9.4"
certifi = "^2023.7.22"
cloudfoundry-client = "^1.23.0"
fire = "^0.4.0"
idna = "^3.7"
python = "^3.8"
urllib3 = "1.26.18"
yarl = "1.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
